--- a/debian/changelog
+++ b/debian/changelog
@@ -41,8 +41,9 @@ ikiwiki (1.51) UNRELEASED; urgency=low
 
   [ Joey Hess ]
   * Include wikiname in syslogged messages.
+  * Updated Polish translation from Pawel Tecza.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 27 Apr 2007 13:47:54 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 27 Apr 2007 16:26:34 -0400
 
 ikiwiki (1.50) unstable; urgency=low
 
