add a description to rfc links

--- a/doc/shortcuts.mdwn
+++ b/doc/shortcuts.mdwn
@@ -23,7 +23,7 @@ This page controls what shortcut links the wiki supports.
 * [[shortcut name=hoogle url="http://haskell.org/hoogle/?q=%s"]]
 * [[shortcut name=iki url="http://ikiwiki.info/%s/"]]
 * [[shortcut name=ljuser url="http://%s.livejournal.com/"]]
-* [[shortcut name=rfc url="http://www.ietf.org/rfc/rfc%s.txt"]]
+* [[shortcut name=rfc url="http://www.ietf.org/rfc/rfc%s.txt" desc="RFC %s"]]
 * [[shortcut name=c2 url="http://c2.com/cgi/wiki?%s"]]
 * [[shortcut name=meatballwiki url="http://www.usemod.com/cgi-bin/mb.pl?%s"]]
 * [[shortcut name=emacswiki url="http://www.emacswiki.org/cgi-bin/wiki/%s"]]
