--- a/doc/bugs/Fancy_characters_get_munged_on_page_save.mdwn
+++ b/doc/bugs/Fancy_characters_get_munged_on_page_save.mdwn
@@ -26,4 +26,4 @@ Sorry, I know the title is ridiculously vague for a bug but I don't know what th
 
 Thanks for that I assumed it would be Perl foo.  I'll look into the web server config.  Though, just thinking some more ... it's weird that it does the correct thing on preview but not on display.  Hrm ... -- Adam.
 
-**FIXED** - Adding "AddDefaultCharset UTF-8" to my Apache config fixed the problem.  Thanks for the help Joey (especially since it had nothing to do with ikiwiki!).  - Adam.
+**[[FIXED|done]]** - Adding "AddDefaultCharset UTF-8" to my Apache config fixed the problem.  Thanks for the help Joey (especially since it had nothing to do with ikiwiki!).  - Adam.
