--- a/debian/changelog
+++ b/debian/changelog
@@ -42,8 +42,9 @@ ikiwiki (1.51) UNRELEASED; urgency=low
   [ Joey Hess ]
   * Include wikiname in syslogged messages.
   * Updated Polish translation from Pawel Tecza.
+  * Updated Czech translation from Miroslav Kure.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 27 Apr 2007 16:26:34 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 28 Apr 2007 13:34:35 -0400
 
 ikiwiki (1.50) unstable; urgency=low
 
