--- a/doc/bugs/Missing_constant_domain_at_IkiWiki.pm_line_842.mdwn
+++ b/doc/bugs/Missing_constant_domain_at_IkiWiki.pm_line_842.mdwn
@@ -42,3 +42,9 @@ new version of Locale::gettext fixed it. --Ethan
 >> and it even works :) --Pawel
 
 Thanks for the note on this, made it very easy to figure out what was going on.  Just pointing out though that the Debian package doesn't require a new version of liblocale-gettext-perl.  I just got bit by this bug setting up a dev ikiwiki box on a mixed stable/testing box.  -- [[Adam]]
+
+> The Debian package has this:
+>
+>     Suggests: [...], liblocale-gettext-perl (>= 1.05-1), [...]
+>
+> --[[JoshTriplett]]
