* Updated Spanish translation from Victor Moral.

--- a/debian/changelog
+++ b/debian/changelog
@@ -43,8 +43,9 @@ ikiwiki (1.51) UNRELEASED; urgency=low
   * Include wikiname in syslogged messages.
   * Updated Polish translation from Pawel Tecza.
   * Updated Czech translation from Miroslav Kure.
+  * Updated Spanish translation from Victor Moral.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 28 Apr 2007 13:34:35 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 28 Apr 2007 22:47:38 -0400
 
 ikiwiki (1.50) unstable; urgency=low
 
