* Apply patch from hb that uses the full path to a file when adding a file   using the mercurial backend. Not 100% sure why it failed w/o the full   path, but this still passes the test suite, and indeed, is how the test   suite calls hg add.

--- a/doc/bugs/mercurial_fail_to_add.mdwn
+++ b/doc/bugs/mercurial_fail_to_add.mdwn
@@ -16,3 +16,11 @@ Here is a patch that's seems to work, although I'm not quite sure what's wrong w
            }
 
 My srcdir path has some symbolics links and hidden directorys... maybe that's it ?
+
+> Interesting, the mercurial test suite shows the add without the path
+> working ok. OTOH, it also continues to work if I apply your patch, so I
+> guess it's safe enough. It would be good to know why it's failing w/o the
+> path in your case. --[[Joey]]
+
+> As I applied the patch, I'm moving this out of the patchqueue to bugs and
+> marking it [[done]]. --[[Joey]]
