--- a/debian/changelog
+++ b/debian/changelog
@@ -44,8 +44,12 @@ ikiwiki (1.51) UNRELEASED; urgency=low
   * Updated Polish translation from Pawel Tecza.
   * Updated Czech translation from Miroslav Kure.
   * Updated Spanish translation from Victor Moral.
+  * Apply patch from hb that uses the full path to a file when adding a file
+    using the mercurial backend. Not 100% sure why it failed w/o the full
+    path, but this still passes the test suite, and indeed, is how the test
+    suite calls hg add.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 28 Apr 2007 22:47:38 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 28 Apr 2007 23:51:35 -0400
 
 ikiwiki (1.50) unstable; urgency=low
 
