--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.51) UNRELEASED; urgency=low
+ikiwiki (1.51) unstable; urgency=low
 
   [ Joey Hess ]
   * Support setting svnpath to "" for wikis that are rooted at the top of
@@ -49,7 +49,7 @@ ikiwiki (1.51) UNRELEASED; urgency=low
     path, but this still passes the test suite, and indeed, is how the test
     suite calls hg add.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 28 Apr 2007 23:51:35 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 29 Apr 2007 00:01:23 -0400
 
 ikiwiki (1.50) unstable; urgency=low
 
