--- a/doc/bugs/Use_install__40__1__41___instead_of_cp__40__1__41___for_installing_files.mdwn
+++ b/doc/bugs/Use_install__40__1__41___instead_of_cp__40__1__41___for_installing_files.mdwn
@@ -19,3 +19,5 @@ Here is a patch againt ikiwiki-1.51 for using find(1) and install(1) instead of 
      
      	install -d $(DESTDIR)$(PREFIX)/share/man/man1
      	install -m 644 ikiwiki.man $(DESTDIR)$(PREFIX)/share/man/man1/ikiwiki.1
+
+> Couldn't it just use install -D ? --[[Joey]]
