--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -21,7 +21,7 @@ Released 29 April 2006.
 * [[Optimised_rendering|todo/optimisations]] if possible. Deal with other
   scalability issues. _(status: scales to thousands of pages, and approximatly
   3.5 times as fast as version 1.0)_ (./)
-* Improved [[todo/html]] stylesheets and templates.
+* Improved [[todo/html]] stylesheets and templates. _(status: [[css_market]] exists; it could always provide more stylesheets.  No alternate templates yet, though.)_
 * Improved scalable [[logo]]. (./)
 * Support for other revision control systems aside from svn.
   See [[about_rcs_backends]] _(status: supports git, tla, mercurial)_ (./)
