web commit by JoshTriplett: Check off the unit test suite; "could of course use more tests" doesn't seem release-critical.

--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -14,7 +14,7 @@ Released 29 April 2006.
 # 2.0
 
 * Unit test suite (with tests of at least core stuff like
-  [[PageSpec]]). _(status: exists, could of course use more tests)_
+  [[PageSpec]]). _(status: exists, could of course use more tests)_ (./)
 * [[Plugins]] (./)
 * [[Tags]] (./)
 * Should have fully working [[todo/utf8]] support. (./)
