web commit by JoshTriplett: Fix typo.

--- a/doc/bugs/Use_install__40__1__41___instead_of_cp__40__1__41___for_installing_files.mdwn
+++ b/doc/bugs/Use_install__40__1__41___instead_of_cp__40__1__41___for_installing_files.mdwn
@@ -1,6 +1,6 @@
 Currently ikiwiki uses cp(1) with GNU extensions in Makefile.PL for installing files, thus causing problems on FreeBSD which doesn't have a cp(1) with GNU extensions in the base system.
 
-Here is a patch againt ikiwiki-1.51 for using find(1) and install(1) instead of cp(1).
+Here is a patch against ikiwiki-1.51 for using find(1) and install(1) instead of cp(1).
 
     --- Makefile.PL.orig	Sun Apr 29 12:57:51 2007
     +++ Makefile.PL	Sun Apr 29 13:08:38 2007
