--- a/doc/bugs/Use_install__40__1__41___instead_of_cp__40__1__41___for_installing_files.mdwn
+++ b/doc/bugs/Use_install__40__1__41___instead_of_cp__40__1__41___for_installing_files.mdwn
@@ -23,3 +23,5 @@ Here is a patch against ikiwiki-1.51 for using find(1) and install(1) instead of
 > Couldn't it just use install -D ? --[[Joey]]
 
 >> No, apparently FreeBSD `install` does not support `-D`.  See [the FreeBSD install manpage](http://www.freebsd.org/cgi/man.cgi?query=install&apropos=0&sektion=0&manpath=FreeBSD+6.2-RELEASE&format=html). --[[JoshTriplett]]
+
+>> Patch applied; [[bugs/done]]. --[[JoshTriplett]]
