--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,14 @@
 ikiwiki (1.52) UNRELEASED; urgency=low
 
+  [ Josh Triplett ]
   * Avoid using GNU extensions to cp during "make install", which did
     not work on FreeBSD.  Thanks to Henrik Brix Andersen for the patch.
 
- -- Josh Triplett <josh@freedesktop.org>  Sun, 29 Apr 2007 15:23:00 -0700
+  [ Joey Hess ]
+  * Use fieldsets in the preferences form to group related options together.
+    Especially cleans up the ordering of the admin's preferences form.
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 29 Apr 2007 18:28:35 -0400
 
 ikiwiki (1.51) unstable; urgency=low
 
