* Use a fieldset to set off the openid entry from the rest of the login   form.

--- a/doc/bugs/login_page_non-obvious_with_openid.mdwn
+++ b/doc/bugs/login_page_non-obvious_with_openid.mdwn
@@ -40,3 +40,6 @@ If you want to keep it as one form, then perhaps using some javascript to disabl
 > is displayed instead of the regular signin form, and it should be
 > possible to use that to manually lay it out better than FormBuilder
 > manages with its automatic layout. --[[Joey]]
+
+> I've improved the form, I think it's more obvious now that the openid
+> stuff is separate. Good enough to call this [[done]]. I think. --[[Joey]]
