--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,10 @@ ikiwiki (1.52) UNRELEASED; urgency=low
   [ Joey Hess ]
   * Use fieldsets in the preferences form to group related options together.
     Especially cleans up the ordering of the admin's preferences form.
+  * Use a fieldset to set off the openid entry from the rest of the login
+    form.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 29 Apr 2007 18:28:35 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 29 Apr 2007 18:47:00 -0400
 
 ikiwiki (1.51) unstable; urgency=low
 
