--- a/debian/changelog
+++ b/debian/changelog
@@ -9,8 +9,10 @@ ikiwiki (1.52) UNRELEASED; urgency=low
     Especially cleans up the ordering of the admin's preferences form.
   * Use a fieldset to set off the openid entry from the rest of the login
     form.
+  * Enable openid logins by default.
+  * Enable usedirs by default.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 29 Apr 2007 18:47:00 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 29 Apr 2007 19:00:15 -0400
 
 ikiwiki (1.51) unstable; urgency=low
 
