--- a/doc/plugins.mdwn
+++ b/doc/plugins.mdwn
@@ -7,7 +7,7 @@ wiki, or just have [[type/fun]].
 There's documentation if you want to [[write]] your own plugins, or you can
 install and use plugins [[contributed|contrib]] by others. 
 
-The [[mdwn]], [[inline]], [[htmlscrubber]], [[passwordauth]],
+The [[mdwn]], [[inline]], [[htmlscrubber]], [[passwordauth]], [[openid]],
 [[signinedit]], [[lockedit]], and [[conditional]] plugins are enabled
 by default. To enable other plugins, use the `--plugin` switch described in
 [[usage]], or the equivalent `add_plugins` line in [[ikiwiki.setup]].
